create home section

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body{
     align-items: center;
     padding: 16px;
     background-color: #1f2937;
-    background-size: auto 110%;
-    
+    padding: 20 15%;
+
 
 }
 .header-right ul{
@@ -33,9 +33,45 @@ body{
 .header-left {
     font-size: 24px;
     color: #f9faf8;
-    margin-left: 15%;
+
 }
 .header-right{
-    margin-right: 15%;
+
 }
 /* end header */
+
+/* home */
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    padding: 160 15%;
+    gap: 40px;
+
+}
+.home h1  {
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: 800;
+}
+.home p {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.home  .img {  
+    flex-basis: 55%;
+    flex-shrink: 0;
+    height: 320px;
+    background-color: gray;
+
+}
+.home button {
+    background-color: #3882f6;
+    padding:10px 20px;
+    border: 0;
+    border-radius: 10%;
+}
+
+/* end home */
