--- a/style.css
+++ b/style.css
@@ -70,7 +70,10 @@ body{
     background-color: #3882f6;
     padding:10px 20px;
     border: 0;
-    border-radius: 10%;
+    border-radius: 5%;
+    color: #e5e7eb;
+    font-weight: bold;
+    font-size: 24px;
 }
 
 
