--- a/css/style.css
+++ b/css/style.css
@@ -55,25 +55,32 @@ body{
     align-items: center;
     background-color: #1f2937;
     padding: 160 15%;
-    gap: 40px;
+    gap: 80px;
 
 }
+
 .home h1  {
     color: #f9faf8;
     font-size: 48px;
     font-weight: 800;
+    margin: 0;
 }
 .home p {
     font-size: 18px;
     color: #e5e7eb;
+    margin: 0;
 }
 
 .home  .img {  
-    flex-basis: 55%;
+    flex-basis: 50%;
     flex-shrink: 0;
     height: 320px;
     background-color: gray;
 
+}
+.home .img img {
+    height: 100%;
+    width: 100%;
 }
 .home button {
     background-color: #3882f6;
@@ -83,6 +90,7 @@ body{
     color: #e5e7eb;
     font-weight: bold;
     font-size: 24px;
+    margin-top: 10px;
 }
 
 
@@ -114,6 +122,10 @@ body{
     .info-images p {
         font-size: 18px;
         color: #1f2937;
+    }
+    .info-images .img img {
+        height: 100%;
+        width: 100%;
     }
 
 /* end info */
